--- a/src/translations/es/global.json
+++ b/src/translations/es/global.json
@@ -49,7 +49,42 @@
 		"listFour": "Múltiple",
 		"listFive": "Física",
 		"listSix": "Visual",
-		"listSeven": "Psicosocial"
+		"listSeven": "Psicosocial",
+		"15%" : "15%",
+		"paragraphWhoAreWe-8": " de las personas registradas manifestó ser",
+		"paragraphWhoAreWe-9": " víctima del conflicto armado.",
+		"HowManyOfUsAreThere" : "¿CUÁNTOS SOMOS?",
+		"paragraphHowManyOfUsAreThere-1": "Población de Colombia:",
+		"paragraphHowManyOfUsAreThere-2": " 51.5 millones",
+		"paragraphHowManyOfUsAreThere-3": " de personas",
+		"paragraphHowManyOfUsAreThere-4": "3.134.037",
+		"paragraphHowManyOfUsAreThere-5": " personas con dificultades para realizar actividades básicas diarias.",
+		"paragraphHowManyOfUsAreThere-6": "Un",
+		"paragraphHowManyOfUsAreThere-7": " 7.1%",
+		"paragraphHowManyOfUsAreThere-8": " de la población del país",
+		"paragraphHowManyOfUsAreThere-9": " Se considera que vive con una discapacidad",
+		"paragraphHowManyOfUsAreThere-10": "23%",
+		"paragraphHowManyOfUsAreThere-11": " de las personas con discapacidades son menores de",
+		"paragraphHowManyOfUsAreThere-12": " 27 años.",
+		"paragraphHowManyOfUsAreThere-13": "Por falta de datos se estima que las",
+		"paragraphHowManyOfUsAreThere-14": " personas con discapacidad",
+		"paragraphHowManyOfUsAreThere-15": " superan el",
+		"paragraphHowManyOfUsAreThere-16": " 15%",
+		"paragraphHowManyOfUsAreThere-17": " de la población, cerca de",
+		"paragraphHowManyOfUsAreThere-18": " 7.2 millones Colombianos."
+
+
+
+
+
+
+		
+
+
+
+
+
+
 
 
 	}
