Traducción lista en página inicio/Nosotros

--- a/src/translations/en/global.json
+++ b/src/translations/en/global.json
@@ -1,6 +1,8 @@
 {
 	"reusable": {
-		"logo": " La Finca De Todos"
+		"logo": " La Finca De Todos",
+		"sources": "Sources",
+		"donate": "Donate"
 	},
 
 	"navbar": {
@@ -35,43 +37,92 @@
 		"mainParagraph-1": "Colombia has been a part of the United Nations Convention on the Rights of Persons with Disabilities since",
 		"mainParagraph-2": " 2011",
 		"mainParagraph-3": "  to promote full participation in all spheres of life.",
-        "whoAreWe" : "WHO ARE WE?",
-        "paragraphWhoAreWe-1": "We are just",
+
+		"whoAreWe": "WHO ARE WE?",
+		"paragraphWhoAreWe-1": "We are just",
 		"paragraphWhoAreWe-2": " like other ",
 		"paragraphWhoAreWe-3": " Colombians",
 		"paragraphWhoAreWe-4": " with some",
 		"paragraphWhoAreWe-5": " additional challenges",
 		"paragraphWhoAreWe-6": " to face.",
-        "paragraphWhoAreWe-7": "We may have one of more of these disabilities",
-        "listOne": "Auditory",
+		"paragraphWhoAreWe-7": "We may have one of more of these disabilities",
+		"listOne": "Auditory",
 		"listTwo": "Intellectual",
 		"listThree": "Deafblind",
 		"listFour": "Multiple",
 		"listFive": "Physical",
 		"listSix": "Visual",
 		"listSeven": "Psicosocial",
-        "15%" : "15%",
+		"15%": "15%",
 		"paragraphWhoAreWe-8": " of the people registered stated that they were",
 		"paragraphWhoAreWe-9": " victims of the armed conflict.",
-        "HowManyOfUsAreThere" : "HOW MANY OF US ARE THERE?",
-        "paragraphHowManyOfUsAreThere-1": "The population of Colombia:",
+
+		"HowManyOfUsAreThere": "HOW MANY OF US ARE THERE?",
+		"paragraphHowManyOfUsAreThere-1": "The population of Colombia:",
 		"paragraphHowManyOfUsAreThere-2": " 51.5 million",
 		"paragraphHowManyOfUsAreThere-3": " people",
-        "paragraphHowManyOfUsAreThere-4": "3.134.037",
+		"paragraphHowManyOfUsAreThere-4": "3.134.037",
 		"paragraphHowManyOfUsAreThere-5": " people face difficulties in carrying out basic daily activities.",
-        "paragraphHowManyOfUsAreThere-6": "",
+		"paragraphHowManyOfUsAreThere-6": "",
 		"paragraphHowManyOfUsAreThere-7": " 7.1%",
 		"paragraphHowManyOfUsAreThere-8": " of the country's population",
 		"paragraphHowManyOfUsAreThere-9": " considered to be living with a disability",
-        "paragraphHowManyOfUsAreThere-10": "23%",
+		"paragraphHowManyOfUsAreThere-10": "23%",
 		"paragraphHowManyOfUsAreThere-11": " of people with disabilities are under the",
 		"paragraphHowManyOfUsAreThere-12": "  age of 27.",
-        "paragraphHowManyOfUsAreThere-13": "Due to a lack of data, it is estimated that",
+		"paragraphHowManyOfUsAreThere-13": "Due to a lack of data, it is estimated that",
 		"paragraphHowManyOfUsAreThere-14": " people with disabilities",
 		"paragraphHowManyOfUsAreThere-15": " exceed",
 		"paragraphHowManyOfUsAreThere-16": " 15%",
 		"paragraphHowManyOfUsAreThere-17": " of the population, about",
-		"paragraphHowManyOfUsAreThere-18": " 7.2 million Colombians."
+		"paragraphHowManyOfUsAreThere-18": " 7.2 million Colombians.",
+
+		"whereAreWe": "WHERE ARE WE?",
+		"paragraphwhereAreWe-1": "The territories with the highest number of people with disabilities are",
+		"paragraphwhereAreWe-2": " Bogotá, Antioquia, Huila, Santander, and Cali.",
+		"paragraphwhereAreWe-3": "In",
+		"paragraphwhereAreWe-4": " Cali,",
+		"paragraphwhereAreWe-5": "",
+		"paragraphwhereAreWe-6": " 55,454",
+		"paragraphwhereAreWe-7": " persons registered as having a disability.",
+		"paragraphwhereAreWe-8": "In",
+		"paragraphwhereAreWe-9": " Valle del Cauca,",
+		"paragraphwhereAreWe-10": "",
+		"paragraphwhereAreWe-11": " 49,423",
+		"paragraphwhereAreWe-12": " persons registered as having a disability.",
+
+		"howAreWeDoing": "HOW ARE WE DOING?",
+		"paragraphhowAreWeDoing-1": "“Confronting various barriers including attitudinal barriers, people with disabilities may feel prevented from",
+		"paragraphhowAreWeDoing-2": " full and effective participation",
+		"paragraphhowAreWeDoing-3": " in society on an",
+		"paragraphhowAreWeDoing-4": "  equal playing field with others.”.",
+		"paragraphhowAreWeDoing-5": "We face",
+		"paragraphhowAreWeDoing-6": " several challenges when leaving home",
+		"paragraphhowAreWeDoing-7": "Uneven streets or sidewalks, and architectural barriers that make it",
+		"paragraphhowAreWeDoing-8": "  impossible for us to access public or private spaces.",
+		"paragraphhowAreWeDoing-9": "Lack of inclusive technology such",
+		"paragraphhowAreWeDoing-10": " as braille, screen readers, and auditory signals.",
+		"paragraphhowAreWeDoing-11": "Looks or questions",
+		"paragraphhowAreWeDoing-12": " that diminish our confidence to go out and explore our environment.",
+		"paragraphhowAreWeDoing-13": "The Ministry of Equality",
+		"paragraphhowAreWeDoing-14": "  was formed in",
+		"paragraphhowAreWeDoing-15": " 2023",
+		"paragraphhowAreWeDoing-16": " to mitigate",
+		"paragraphhowAreWeDoing-17": "  social imbalances and inequality.",
+		"paragraphhowAreWeDoing-18": "Vice President",
+		"paragraphhowAreWeDoing-19": " Francia Márquez said that the Ministry of Equality will be  “a mechanism to advance the effective reduction of inequality and inequity gaps in Colombia”.",
+		"paragraphhowAreWeDoing-20": " is part of this call to action for the inclusion of all people in our society and to create the accessibility to reach that goal."
+	},
+
+	"team": {
+		"team": "Team",
+        "projectCreator" : "Project Creator",
+        "title-1-Lissette": "Attorney defending the rights of persons with disabilities and the elderly",
+        "title-2-Lissette": "Bachelors of Science in Communications from the University of Illinois at Urbana-Champaign",
+        "title-3-Lissette": "Juris Doctor from the University of Wisconsin-Madison",
+        "title-1-Fabiola": "Elementary school teacher with emphasis on teaching children with learning delays and special education",
+		"title-2-Fabiola": "Bachelor of Arts in Elementary Education from National Louis University",
+		"title-3-Fabiola": "Masters in Special Education from National Louis University"
 
 
 
