--- a/src/translations/en/global.json
+++ b/src/translations/en/global.json
@@ -136,12 +136,54 @@
 		"Cards-5": "Sound and Braille guides for navigating the Farm",
 		"Cards-6": "Accessible restrooms with changing facilities",
 		"Cards-7": "Service animals and companion pets are welcome",
-		"Cards-8": "Free Wifi and PC to connect to the MinTIC Relay Center"
+		"Cards-8": "Free Wifi and PC to connect to the MinTIC Relay Center",
+		"titleONU-1": "Sustainable Development Goals",
+		"titleONU-2": "according to the United Nations (UN)",
+		"Cards-objectives-1": "Construction that respects the existing terrain to promote and protect biodiversity.",
+		"Cards-objectives-2": "Use of recycled and sustainable materials such as recycled plastic wood and guadua bamboo.",
+		"Cards-objectives-3": "Recycling of rainwater for use in crop irrigation, cleaning, and toilets.",
+		"Cards-objectives-4": "Renewable energy technology ensures the highest use of sustainable energy.",
+		"Cards-objectives-5": "Creating jobs for people with disabilities by promoting inclusive and sustainable economic growth.",
+		"Cards-objectives-6": "We provide high-quality educational programs with an emphasis on inclusion.",
+		"Cards-objectives-7": "Sustainable agricultural systems for the production of food consumed on the farm."
+	},
+	"weekend": {
+		"weekendActivities": "Weekend activities",
+		"Cards-1" : "Butterfly Farm",
+		"paragraphCards-1": "Observe a spectable of colors in an accessible space dedicated to the breeding and conservation of butterflies.",
+		"Cards-2" : "Accessible and elevated garden beds",
+		"paragraphCards-2": "We seek to recover contact with nature in an accessible way so we can have the experience of planting, caring for, and harvesting food.",
+		"Cards-3" : "Accessible greenhouse with smart technology",
+		"paragraphCards-3": "In our accessible greenhouse, you can see smart technology implemented for lower energy use, environmental control software, and an intelligent irrigation system.",
+		"Cards-4" : "Flight Simulator",
+		"paragraphCards-4": "An adaptable cockpit that allows accessible use of Microsoft Flight Simulator, a tool used by real pilots and aviation enthusiasts to experience flying around the world.",
+		"paragraphCards-4-1": "Photo by  House of Wheels, Menash Cohen",
+		"Cards-5" : "Path and sensory garden",
+		"paragraphCards-5": "Feel with your hands or feet the textures of the countryside, smell the essence of aromatic herbs, and explore a space full of surprises for your senses.",
+		"Cards-6" : "Animals on the farm",
+		"paragraphCards-6": "Here we can interact with the animals of the farm in a fully accessible environment to have the experience of milking a goat, feeding the chickens, or collecting eggs from the nests comfortably.",
+		"Cards-7" : "Zen Garden",
+		"paragraphCards-7": "A place to meditate, feel calm, and recharge positive energy in a quiet and accessible space. Design based on Zen principles and Japanese culture, this space favors serenity and meditation.",
+		"Cards-8" : "Sustainable and accessible house",
+		"paragraphCards-8": "Explore a home that is 100% accessible and constructed on principles of sustainability. Learn how we recycle rainwater, what the walls are made of, and how we turn on the wifi with technology to help our planet.",
+		"Cards-9" : "Inclusive park and climbing wall",
+		"paragraphCards-9": "The inclusive play area is designed for visitors of all abilities to play together. Climb the wall and reach new heights: we have adapted climbing equipment to ensure your safety.",
+		"Cards-10" : "Cafeteria",
+		"paragraphCards-10": "Taste a variety of delicacies prepared by local artisans and right here at La Finca de Todos. Freshly made with love, all ingredients were harvested here in Colombia."
+
+
+
+
+
+
+
+
 
 
 
 
 
 	}
+
 
 }
